@@ -3,7 +3,7 @@ Theme Name: Responsive
 Theme URI: http://themeid.com/responsive-theme 
 Description: Responsive WordPress Theme that features 9 page Templates such as Blog, Blog Summary and Template based layout designs: sidebar/content, sidebar/content half, content/sidebar and content/sidebar half. There is also full width page, sitemap Template as well as landing page for your PPC or any other purposes. Responsive also supports 9 widget areas and best of all this Theme is crafted with fluid proportion-based grid system of our own to adapt the design to the viewing environment. There are also Theme Options to control the content, webaster tools, logo managament and social icons and 4 navigation menus. Everything is backed by our dedicated support forums: <a href="http://themeid.com/forum">support forum</a>.
 
-Version: 1.3.5 
+Version: 1.3.6 
 Author: ThemeID 
 Author URI: http://themeid.com
 Tags: white, black, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, left-sidebar, right-sidebar, flexible-width, theme-options, threaded-comments, full-width-template, sticky-post
@@ -1326,7 +1326,6 @@ form div {
 }
 
 #widgets #s {
-	padding: 4px 10px;
 	width:70%;
 }
 
