@@ -7,6 +7,11 @@ Changelog Legend:
 [x] = Deleted
 [!] = Bugs
 
+(03/22/2012) - Maintenance Version 1.3.5
+[x] #widgets #s padding in style.css
+[+] bbPress breadcrumb compatibility patch by Dan Smith keystonedatabase.com
+[+] localization support
+
 (03/21/2012) - Maintenance Version 1.3.4
 [!] #widgets p border bug
 [x] #widgets p
